feat: 使用Memory专门存储记忆,区别于历史